<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorWhiteLight"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorGreenLight"
        android:gravity="center_horizontal"
        android:textSize="18sp"
        android:padding="10sp"
        android:textStyle="bold"
        android:text="@string/select_days_free_in_week_you_have"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvDaysOfWeek"
        android:layout_width="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:listitem="@layout/item_filter"
        android:elevation="10dp">

    </android.support.v7.widget.RecyclerView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorGreenLight"
        android:gravity="center_horizontal"
        android:textSize="18sp"
        android:padding="10sp"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        android:text="@string/select_periods_you_have_free"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvTimesOfDays"
        android:layout_width="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:listitem="@layout/item_filter"
        android:elevation="10dp">

    </android.support.v7.widget.RecyclerView>

    <TextView
        android:id="@+id/tvLastStep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorGreenLight"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:padding="30sp"
        android:textStyle="bold"
        android:text="@string/last_step"/>

</LinearLayout>