<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="10dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            app:cardBackgroundColor="@color/colorRedApp">

            <ImageButton
                android:id="@+id/btnClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="5dp"
                android:background="@android:drawable/ic_menu_close_clear_cancel"
                android:focusableInTouchMode="true"
                android:padding="20dp" />

            <TextView
                android:id="@+id/tvInstitutionName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Espaço Cultura Vovó Tânia"
                android:textColor="@android:color/white"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/tvScope"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_marginBottom="20dp"
                android:text="Região central de Blumenau"
                android:textColor="@android:color/white"
                android:textSize="15sp" />


        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/tvAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_address"
                    android:padding="5dp"
                    android:text="Rua Roraima, 59, Casa - Valparaiso - Blumenau / SC" />

                <TextView
                    android:id="@+id/tvPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_phone"
                    android:padding="5dp"
                    android:text="(47) 3037-3470" />

                <TextView
                    android:id="@+id/tvMail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_mail"
                    android:padding="5dp"
                    android:text="taniacontadores@terra.com.br" />


                <TextView
                    android:id="@+id/tvResponsible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_phone"
                    android:padding="5dp"
                    android:text="Responsável: Tania Maria da Silva" />

                <TextView
                    android:id="@+id/tvWorkingHours"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_phone"
                    android:padding="5dp"
                    android:text="Segunda a Sexta, 13h as 17h" />
            </LinearLayout>


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            app:cardCornerRadius="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/about"
                    android:textStyle="bold"
                    android:textColor="@color/colorRedApp"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tvAbout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="Sitio dona lucia precisa de varias coisas bla bla bla bla bla bla bla bla balalalallal mais migue imoissvel esses cara sao foda"
                    android:textSize="15sp" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            app:cardCornerRadius="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/volunteers"
                    android:textStyle="bold"
                    android:textColor="@color/colorRedApp"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/btnVolunteers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/shape_rounded_corner"
                    android:text="Voluntários para cuidar de crianças"
                    android:textColor="@android:color/white"
                    android:textSize="15sp" />

            </LinearLayout>


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="220dp"
            app:cardCornerRadius="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/donations"
                    android:textStyle="bold"
                    android:textColor="@color/colorRedApp"
                    android:textSize="15sp" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rvDonations"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusable="false"
                    tools:listitem="@layout/item_donation" />

            </LinearLayout>


        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>